Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 <span class="n">bag</span><span class="o">(</span><span class="mi">1</span><span class="o">)</span>    <span class="o">--&gt;</span> <span class="nc">Bag</span><span class="o">(</span><span class="mi">7</span><span class="o">,</span> <span class="mi">4</span><span class="o">,</span> <span class="mi">4</span><span class="o">,</span> <span class="mi">4</span><span class="o">,</span> <span class="mi">4</span><span class="o">,</span> <span class="mi">1</span><span class="o">,</span> <span class="mi">1</span><span class="o">)</span> <span class="c1">// equivalent modulo 1</span>
 <span class="n">bag</span><span class="o">(</span><span class="mi">2</span><span class="o">)</span>    <span class="o">--&gt;</span> <span class="nc">Bag</span><span class="o">(</span><span class="mi">8</span><span class="o">,</span> <span class="mi">5</span><span class="o">,</span> <span class="mi">2</span><span class="o">)</span> <span class="c1">// equivalent modulo 2</span>
 </pre></div>
+
+<h2>
+<a name="maven-repository" class="anchor" href="#maven-repository"><span class="octicon octicon-link"></span></a>Maven repository</h2>
+
+<p>It is availabe on Maven Central [<a href="https://github.com/nicolasstucki/multisets/blob/master/MavenRepository.md">https://github.com/nicolasstucki/multisets/blob/master/MavenRepository.md</a>]</p>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
