--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
 <h2>
 <a name="maven-repository" class="anchor" href="#maven-repository"><span class="octicon octicon-link"></span></a>Maven repository</h2>
 
-<p>It is availabe on Maven Central [<a href="https://github.com/nicolasstucki/multisets/blob/master/MavenRepository.md">https://github.com/nicolasstucki/multisets/blob/master/MavenRepository.md</a>]</p>
+<p>The last version of Scala multisets is 0.1</p>
+
+<p>Scala multisets can be downloaded from Maven Central.</p>
+
+<div class="highlight highlight-xml"><pre><span class="nt">&lt;dependency&gt;</span>
+  <span class="nt">&lt;groupId&gt;</span>io.github.nicolasstucki<span class="nt">&lt;/groupId&gt;</span>
+  <span class="nt">&lt;artifactId&gt;</span>multisets<span class="nt">&lt;/artifactId&gt;</span>
+  <span class="nt">&lt;version&gt;</span>0.1<span class="nt">&lt;/version&gt;</span>
+<span class="nt">&lt;/dependency&gt;</span>
+</pre></div>
+
+<p>To use it with SBT, just add the following dependency to <code>build.sbt</code>:</p>
+
+<div class="highlight highlight-scala"><pre><span class="n">libraryDependencies</span> <span class="o">++=</span> <span class="nc">Seq</span><span class="o">(</span><span class="s">"io.github.nicolasstucki"</span> <span class="o">%%</span> <span class="s">"multisets"</span> <span class="o">%</span> <span class="s">"0.1"</span><span class="o">)</span>
+</pre></div>
       </section>
       <footer>
         <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
